--- a/index.html
+++ b/index.html
@@ -106,94 +106,84 @@ analysis </a> at the University of Alberta</p>
 </article>
 							<article id="ResearchInterests">
 
-<h2 class="major">Online Research Talks</h2>
+
+								<h2 class="major">Research Interests</h2>
+<h3 class="minor">Keywords</h2>
+<ul> 
+<li>Transient Dynamics</li>
+<li> Empirical dynamical modelling</li>
+<li>Ecological Stoichiometry</li>
+<li>Resource explicit population dynamics</li>
+<li>Dynamical systems</li>
+</ul>
+<p>My research is at the intersection of Mathematics and Ecology. Using mathematical tools, I aim to answer important ecological questions that arise from societal, cultural, economic and environmental concerns. Currenly, I am 
+interested in the study of transient dynamics from both the mathematical and ecological perspectives. In particular, I am studying how we can utilize the existed dynamical systems literature to predict transient behavior in ecological data using empirical dynamical modelling as a tool. 
+In my PhD work I studied various mathematical and ecological aspects of phytoplankton dynamics: using dynamical systems and singular perturbation theory to uncover the driving ecological mechanisms behind algal bloom dynamics, using game theory and bifurcation theory to understand the complex interaction between humans and aquatic environments, and using spatial modeling and monotone dynamical systems theory to offer insights towards the observed diversity of phytoplankton species via niche differentiation in the light spectrum. 
+</p>
+
+<h2 class="major">Recorded Research Talks</h2>
 <ul>
+
+<li> <a href="http://www.fields.utoronto.ca/activities/22-23/ecology">Fields Institute: Workshop on Advances in Mathematical Ecology</a>   (December 2022)
+
+<p><a href=" http://www.fields.utoronto.ca/talks/Model-free-methods-predicting-transient-dynamics">Model free methods of predicting transient dynamics</a></p></li>
 
 <li> <a href="https://mbi.osu.edu/events/life-planet-earth-above-and-below">MBI: Life on Planet Earth</a>   (August 11th-13th 2020)
 
 <p><a href="https://video.mbi.ohio-state.edu/video/player/?id=4964&title=Coupling+the+socio-economic+and+ecological+dynamics+of+cyanobacteria">Coupling the socio-economic and ecological dynamics of cyanobacteria</a></p></li>
 
 </ul>
-								<h2 class="major">Research Interests</h2>
+
+<h2 class="major">Interesting figures</h2>
 <center>
 
  <div class='pics_in_a_row'>
     <div class='img1'>
-      <img src='images/pigeonlake.jpg'>
-<figcaption> <font size="-1"> Pigeon lake health advisory [1].</font> </figcaption>
+      <img src='images/myfile.gif' style="width:50%">
+<figcaption> <font size="-0"> A sample of transient dynamics induced by a changing environment. This example shows rate, or phase induced tipping, where a system undergoes no bifurcation but certain environmental parameters change fast enough causing the dynamics to leave the stable limit cycle and enter another attracting region. See publication [9] and preprint in progress.</font> </figcaption>
     </div>
-    <div class='img2'>
-      <img src='images/bloomAEP.jpg'>
-<figcaption> <font size="-1"> Harmful cyanobacteria bloom [2]. </font> </figcaption>
-    </div>
-  </div>
+   
 </center>
 
-
-
-
-
-								<p>My research interests lie in the areas of Mathematical ecology, and in particular within the framework of Ecological Stoichiometry.</p> 
-<p> My most recent projects include studying cyanobacteria dynamics in eutrophic freshwater lakes. Cyanobacteria blooms often only form a few times per year in more temperature regions, such as Alberta, Canada. For this reason, studying the long term dynamics of cyanobacteria models might not yield sufficient information with regards to management strategies. Furthermore, by studying the short term dynamics we are able to uncover driving mechanisms behind each aspect of bloom formation and collapse.
-</p>
-
+					
 
 <center>
 
  <div class='pics_in_a_row'>
     <div class='img3'>
       <img src='images/impulsesample.png'>
-<figcaption> <font size="-1">Cyanobacteria model simulation [3].</font> </figcaption>
     </div>
     <div class='img4'>
       <img src='images/mani.png'>
-<figcaption> <font size="-1"> Fast-slow analysis of cyanobacteria dynamics [3].  </font> </figcaption>
     </div>
   </div>
+<figcaption> <font size="-0"> Using singular perturbation theory to offer a mechanisitic explanation of the observed transient dynamics in phytoplankton dynamics(right). The left figure shows that transient dynamics occur due to a transition between two attracting manifolds. One represent light limiation, the other nutrient limitation. Details in publication [2]  </font> </figcaption>
 </center>
-
-
-
-<p> I am also interested in how socio economic factors, such as anthropogenic nutrient inputs and social pressure to limit pollution can be coupled to the cyanobacteria dynamics and the resultant implications. Under various social pressure regime shifts can occur. That is, a human population may transition between being high polluters and low polluters based on social pressure and concern for the algal blooms. </p>
-<center>
-
-
-  
-
-   
-      <img src='images/hyst.png' style="width:50%">
-<figcaption> <font size="-1"> Possible cyanobacteria equilibrium for a given amount of social pressure [4].  </font> </figcaption>
-   
-</center>
-
-<p>In addition I am mathematically studying competition between phytoplankton species under various incident light scenarios. Furthermore, we consider a niche differentiation of phytoplankton species. This is an approach to mathematically the explain the 
-
-<a href="https://en.wikipedia.org/wiki/Paradox_of_the_plankton#:~:text=In%20aquatic%20biology%2C%20the%20paradox,will%20be%20driven%20to%20extinction">paradox of the plankton</a> 
- and show that robust coexistence of several species is possible when they are able to utilize different wavelengths. </p>
 
 <center>
 
-
-  
-
-   
-      <img src='images/alph1alph1.png' style="width:50%">
-<figcaption> <font size="-1"> Coexistence region for various advection rates of two competing phytoplankton species that absorb different wavelengths.  [4].  </font> </figcaption>
+ <div class='pics_in_a_row'>
+    <div class='img1'>
+      <img src='images/2parbif.png' style="width:100%">
+<figcaption> <font size="-0"> Shows the regime outcome for given social norm costs of a model that couples human interaction with a network of lakes. Humans chose to either cooperate or defect to reduce lake pollution based on economic and social costs. A high cooperation regime results in a lower abundance of phytoplankton. The figure shows parameter values such the each node is in an high cooperation or low cooperation regime. The mixed cooperation regime is where some nodes are highly cooperative and others are not. See publication [4] </font> </figcaption>
+    </div>
    
 </center>
+<center>
+
+ <div class='pics_in_a_row'>
+    <div class='img1'>
+      <img src='images/specvsgen.png' style="width:100%">
+<figcaption> <font size="-0"> Shows the coexistence region of two phytoplankton species for light. Treating light as a continuous rescource we consider niche differentiation in the light spectrum allow for more robust coexistence. When the niches are significantly different coexistence occurs. See publication [10]</font> </figcaption>
+    </div>
+   
+</center>
+
+
 
 
 								<p>Please see my <a href="#Publications">publications</a> for more information on these projects.</p>
-<h4 class="major">Image sources</h4>
-<font size="-1">
-<ol>
-<li> Image from: https://globalnews.ca/news/2867098/blue-green-algae-bloom-spotted-in-pigeon-lake-despite-communitys-best-efforts/  (2020) </li>
-<li> Image from: https://myhealth.alberta.ca/alberta/pages/blue-green-algae.aspx  (2020)</li>
-<li> M. Heggerud, H. Wang, M. A. Lewis, <i>Transient dynamics of a stoichiometric cyanobacteria model via multiple-scale analysis.</i>
-SIAM Journal on Applied Mathematics (Accepted for Publication) (2020)</li>
-<li> In a paper to be submitted soon </li>
-</ol>
-</font>
+
 
 							</article>
 
