--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ In preparation.</li>
 						<!-- About -->
 							<article id="CV">
 								<h2 class="major">CV</h2>
-<p> Click <a href="CV.pdf" target="blank"> here</a> if you can not view the PDF.  </p>
+<p> Click <a href="CVMay23.pdf" target="blank"> here</a> if you can not view the PDF.  </p>
 
-<embed src="CV.pdf" type="application/pdf" width="100%" height="650" />
+<embed src="CVMay23.pdf" type="application/pdf" width="100%" height="650" />
 
 
 							</article>
