--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@ In preparation.</li>
 <p> A link to my <a href="https://scholar.google.com/citations?user=XOppOQUAAAAJ&hl=en">Google Scholar page.</a> If you cannot access any of these papers on your own please do not hesistate to request one directly from me.
 </p>
 
-<embed src="publistMay23.pdf" type="application/pdf" width="100%" height="600" />
+<embed src="PublistMay23.pdf" type="application/pdf" width="100%" height="600" />
 
-<p> Click <a href="publistMay23.pdf" target="blank"> here</a> if you can not view the PDF.
+<p> Click <a href="PublistMay23.pdf" target="blank"> here</a> if you can not view the PDF.
 </p>
 							</article>
 
