--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<p> <img src="images/777.png" alt="hi" class="rounded" /> </p>
+							<p> <img src="images/headshot1.jpg" alt="hi" class="rounded" /> </p>
 						</div> 
 
 
