--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							 <img src="images/headshot1.jpg"   class="rounded" /> 
+							 <img src="images/Headshot1.jpg"   class="rounded" /> 
 						</div> 
 
 
