"update on Feb12/24"
This reverts commit f550820384f99c0d3de82e3d8bcb1f916eae1d77.

--- a/index.html
+++ b/index.html
@@ -140,11 +140,23 @@ In my PhD work I studied various mathematical and ecological aspects of phytopla
 </ul>
 
 <h2 class="major">Interesting figures</h2>
+
+<center>
+
+	<div class='pics_in_a_row'>
+	   <div class='img1'>
+		 <video src="images/delayembed.mov" width=70% autoplay muted loop></video>
+   <figcaption> <font size="-0"> This video shows how a chaotic attractor can be reconstructed using delayed coordinates. That is, the dynamics of the full model are similar to the dynamics of the just a single dimension realized at different times. This stems from Taken's theorem and is the foundation of Empirical Dynamical Modelling. 
+   </font> </figcaption>
+	   </div>
+	  
+   </center>
+
 <center>
 
  <div class='pics_in_a_row'>
     <div class='img1'>
-      <img src='images/myfile.gif' style="width:50%">
+      <img src='images/myfile.gif' style="width:70%">
 <figcaption> <font size="-0"> A sample of transient dynamics induced by a changing environment. This example shows rate, or phase induced tipping, where a system undergoes no bifurcation but certain environmental parameters change fast enough causing the dynamics to leave the stable limit cycle and enter another attracting region. See publication [9] and preprint in progress.</font> </figcaption>
     </div>
    
