--- a/index.html
+++ b/index.html
@@ -214,50 +214,7 @@ In my PhD work I studied various mathematical and ecological aspects of phytopla
 						<!-- Work -->
 							<article id="Publications">
 								<h2 class="major">Publications</h2>
-<!--
-<ul>
-										<li><b>C. M.  Heggerud</b>, C. M., Wang, H. & Lewis, M. A. 
 
-<a href="M125121.pdf" target="blank"> <i>Transient dynamics of a stoichiometric cyanobacteria model via multiple-scale analysis</i>.</a>  SIAM J. Appl. Math. 80, 1223–1246 (2020).</li>
-										<li><b>C.M. Heggerud</b> and K.Q. Lan, <i>Local stability analysis of ratio-dependent predator-prey models with
-predator harvesting rates.</i>
-Applied Mathematics and Computation 270: 349-357 (2015)
-</li>
-
-<li>A. Peace, P. C. Frost, N. D. Wagner, M. Danger, C. Accolla, P. Antczak, B. W. Brooks, D. M. Costello, R.
-A. Everett, K. B. Flores, <b>C. M. Heggerud</b>, R. Karimi, Y. Kang, Y. Kuang, J. H. Larson, T. Mathews, G. D.
-Mayer, J. N. Murdock, C. A. Murphy, R. M. Nisbet, L. Pecquerie, N. Pollesch, E. M. Rutter, K. L. Schulz,
-J. T. Scott, L. Stevenson, H. Wang, <i> Stoichiometric Ecotoxicology for a Multisubstance World.</i>
-BioScience: biaa160, https://doi.org/10.1093/biosci/biaa160 (2021). </li>
-
-<li>
-<b>C. M. Heggerud</b>, K.-Y. Lam, H. Wang, <i>Coexistence of phytoplankton species based on niche
-differentiation in absorption spectrum.</i>
-In preparation.</li>
-
-<li>
-H. Wang, P. V. Garcia, S. Ahmed, <b>C. M. Heggerud</b>, <i>A mathematical comparison of the Monod and
-Droop forms for resource based population dynamics.</i>
-In preparation.
-</li>
-
-<li>
-<b>C. M. Heggerud</b>, H. Wang, M. A. Lewis, <i>Coupling the socio-economic and ecological dynamics of
-cyanobacteria</i>
-In preparation.
-</li>
-
-<li>
-J. Xu, P. Ramazi, <b>C. M. Heggerud</b>, M. A. Lewis, R. Zurawell, C. Loewen, R. Vinebrooke, H. Wang, <i>A
-Baysian network approach to understanding and predicting cyanobacteria blooms.</i>
-In preparation.</li>
-
-<embed src="publist.pdf" type="application/pdf" width="100%" height="600" />
-
-<p> Click <a href="publist.pdf" target="blank"> here</a> if you can not view the PDF.
-</p>
-										
-									</ul>-->
 <p> A link to my <a href="https://scholar.google.com/citations?user=XOppOQUAAAAJ&hl=en">Google Scholar page.</a> If you cannot access any of these papers on your own please do not hesistate to request one directly from me.
 </p>
 
@@ -265,30 +222,30 @@ In preparation.</li>
 
 <ul class="space_list">
 <li>
-	12.	C. M. Heggerud & A. Hastings, Predicting transient dynamics through the use of empirical dynamical modelling: A case study of anaerobic digestion. Journal of the Royal Society Interface, 21:20240059 (2024)
+	12.	<b> C. M. Heggerud </b>  & A. Hastings, <a href= "https://royalsocietypublishing.org/doi/full/10.1098/rsif.2024.0059">Predicting transient dynamics through the use of empirical dynamical modelling: A case study of anaerobic digestion.</a> Journal of the Royal Society Interface, 21:20240059 (2024)
 </li><li>
-	11.	K.C. Abbot, C.M. Heggerud, YC. Lai, A. Morozov, S. Petrovski, K. Cuddington, & A. Hastings. When and why ecological systems respond to the rate rather than the magnitude of environmental changes. Biological Conservation, 292:110494 (2024)
+	11.	K.C. Abbot, <b> C. M. Heggerud </b> , YC. Lai, A. Morozov, S. Petrovski, K. Cuddington, & A. Hastings. <a href="https://www.sciencedirect.com/science/article/pii/S0006320724000557#:~:text=Rate%2Ddependent%20responses%20are%20consequences,of%20time%2C%20out%20of%20equilibrium."> When and why ecological systems respond to the rate rather than the magnitude of environmental changes</a>. Biological Conservation, 292:110494 (2024)
 </li><li>
-	10.	C. M. Heggerud, J. Xu, Hao Wang, M. A. Lewis, R. Zurawell, C. Loewen, R. Vinebrooke, & P. Ramazi,  Predicting imminent cyanobacterial blooms in lakes using incomplete timely data. Water Resources Research 60, 2 (2024)
+	10.	<b> C. M. Heggerud </b> , J. Xu, Hao Wang, M. A. Lewis, R. Zurawell, C. Loewen, R. Vinebrooke, & P. Ramazi, <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023WR035540"> Predicting imminent cyanobacterial blooms in lakes using incomplete timely data</a>. Water Resources Research 60, 2 (2024)
 </li><li>
-	9.	C. M. Heggerud,  KY. Lam & H. Wang. Niche differentiation in the light spectrum promotes coexistence of phytoplankton species: a spatial modelling approach. Journal of Mathematical Biology 86, 54 (2023)
+	9.	<b> C. M. Heggerud </b> ,  KY. Lam & H. Wang.<a href="https://link.springer.com/article/10.1007/s00285-023-01890-z"> Niche differentiation in the light spectrum promotes coexistence of phytoplankton species: a spatial modelling approach.</a> Journal of Mathematical Biology 86, 54 (2023)
 </li><li>
-	8.	A. Shen, S. Gao, C. M. Heggerud, H. Wang, Z. Ma, & S. Yuan. Fluctuation of growth and photosynthetic characteristics in Prorocentrum shikokuense under phosphorus limitation: Evidence from field and laboratory. Ecological Modelling,
+	8.	A. Shen, S. Gao, <b> C. M. Heggerud </b> , H. Wang, Z. Ma, & S. Yuan.<a href="https://www.sciencedirect.com/science/article/pii/S0304380023000388"> Fluctuation of growth and photosynthetic characteristics in Prorocentrum shikokuense under phosphorus limitation: Evidence from field and laboratory.</a> Ecological Modelling,
 479, (2023).
 </li><li>
-7.	C. M. Heggerud, K.C. Abbott, A. Hastings, Transient Dynamics. Oxford Bibliographies in Ecology. New York: Oxford University Press, 2023.
+7.	<b> C. M. Heggerud </b> , K.C. Abbott, A. Hastings,<a href="https://www.oxfordbibliographies.com/display/document/obo-9780199830060/obo-9780199830060-0241.xml"> Transient Dynamics.</a> Oxford Bibliographies in Ecology. New York: Oxford University Press, 2023.
 </li><li>
-6.	V. Kirkow, H. Wang,  P. V. Garcia, S. Ahmed, C. M. Heggerud, Impacts of a changing environment on a stoichiometric producer-grazer system: a stochastic modelling approach. Ecological Modelling 469 (2022).
+6.	V. Kirkow, H. Wang,  P. V. Garcia, S. Ahmed, <b> C. M. Heggerud </b> , <a href="https://www.sciencedirect.com/science/article/pii/S0304380022000874"> Impacts of a changing environment on a stoichiometric producer-grazer system: a stochastic modelling approach.</a> Ecological Modelling 469 (2022).
 </li><li>
-5.	H. Wang, P. V. Garcia, S. Ahmed, C. M. Heggerud*,  Mathematical comparison and empirical review of the Monod and Droop forms for resource-based population dynamics. Ecological Modelling 466 (2022). (*Supervisory Author)
+5.	H. Wang, P. V. Garcia, S. Ahmed, <b> C. M. Heggerud </b> *, <a href="https://www.sciencedirect.com/science/article/pii/S030438002200014X"> Mathematical comparison and empirical review of the Monod and Droop forms for resource-based population dynamics.</a> Ecological Modelling 466 (2022). (*Supervisory Author)
 </li><li>
-4.	C. M. Heggerud, H. Wang, & M. A. Lewis, "Coupling the socio-economic and ecological dynamics of cyanobacteria: Single lake and network dynamics." Ecological Economics 194 (2022).
+4.	<b> C. M. Heggerud </b> , H. Wang, & M. A. Lewis,<a href="https://www.sciencedirect.com/science/article/pii/S0921800921003839"> Coupling the socio-economic and ecological dynamics of cyanobacteria: Single lake and network dynamics.</a> Ecological Economics 194 (2022).
 </li><li>
-3.	A. Peace, P. C. Frost, N. D. Wagner, M. Danger, C. Accolla, P. Antczak, B. W. Brooks, D. M. Costello, R. A. Everett, K. B. Flores, C. M. Heggerud, R. Karimi, Y. Kang, Y. Kuang, J. H. Larson, T. Mathews, G. D. Mayer, J. N. Murdock, C. A. Murphy, R. M. Nisbet, L. Pecquerie, N. Pollesch, E. M. Rutter, K. L. Schulz, J. T. Scott, L. Stevenson, & H. Wang. Stoichiometric Ecotoxicology for a Multisubstance World. BioScience:  biaa160, (2021).
+3.	A. Peace, P. C. Frost, N. D. Wagner, M. Danger, C. Accolla, P. Antczak, B. W. Brooks, D. M. Costello, R. A. Everett, K. B. Flores, <b> C. M. Heggerud </b> , R. Karimi, Y. Kang, Y. Kuang, J. H. Larson, T. Mathews, G. D. Mayer, J. N. Murdock, C. A. Murphy, R. M. Nisbet, L. Pecquerie, N. Pollesch, E. M. Rutter, K. L. Schulz, J. T. Scott, L. Stevenson, & H. Wang.<a href="https://academic.oup.com/bioscience/article/71/2/132/6096833">Stoichiometric Ecotoxicology for a Multisubstance World.</a>  BioScience:  biaa160, (2021).
 </li><li>
-2.	C. M. Heggerud, H. Wang, & M. A. Lewis, Transient dynamics of a stoichiometric cyanobacteria model via multiple-scale analysis. SIAM Journal of Applied Mathematics 80 (3), 1223–1246 (2020).
+2.	<b> C. M. Heggerud </b> , H. Wang, & M. A. Lewis,<a href="https://epubs.siam.org/doi/10.1137/19M1251217">Transient dynamics of a stoichiometric cyanobacteria model via multiple-scale analysis.</a>  SIAM Journal of Applied Mathematics 80 (3), 1223–1246 (2020).
 </li><li>
-1.	C. M. Heggerud, & K.Q. Lan. Local stability analysis of ratio-dependent predator-prey models with predator harvesting rates. Applied Mathematics and Computation 270: 349-357 (2015).
+1.	<b> C. M. Heggerud </b> , & K.Q. Lan. Local stability analysis of ratio-dependent predator-prey models with predator harvesting rates. Applied Mathematics and Computation 270: 349-357 (2015).
 </li>
 </ul>
 
