--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 							<div class="inner">
 								<h1>Christopher Heggerud</h1>
 								<p> Postdoctoral Reasearcher at the University of California, Davis <br />
+									Assistant Professor,  Department of Mathematics at the University of Manitoba (Starting July 2025)<br />
 								</p>
 							</div>
 						</div>
