--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ After completing my undergraduate degree at Toronto Metropolitan University, I m
 		<h2 class="major">Contact Me</h2>
 <p>
 
-<b>Email:</b> cmheggerud[at]gmail[dot]ca or cmheggerud[at]ucdavis[dot]edu <br/>
+<b>Email:</b> cmheggerud[at]gmail[dot]ca or christopher.heggerud[at]umanitoba[dot]ca <br/>
 
 <b>Title:</b> Postdoctoral Researcher<br/>
 <b>Affiliations:</b> Alan Hastings research lab, Center for Populaition Biology (UC Davis), Department of Environmental Science and Policy (UC Davis), and Department of Mathematics (UC Davis).<br/>
