--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@ In my PhD work I studied various mathematical and ecological aspects of phytopla
 
 
 <ul class="space_list">
+	<li>14. J. Serpico, B.A. Zambrano-Luna, R. Milne, <b>C. M. Heggerud</b>, A. Hastings, H. Wang. <a href="https://doi.org/10.48550/arXiv.2410.20757">Deciphering culprits for cyanobacterial blooms and lake vulnerability in north-temperate lakes</a>, In review (2024)</li>
+<li>
+	13. A. Morozov, U. Feudel, A. Hastings, K.C. Abbott, K. Cuddington, <b>C. M. Heggerud</b>, S. Petrovskii, <a href="https://doi.org/10.1016/j.plrev.2024.11.004">Long-living transients in ecological models: recent progress, new challenges, and open questions</a>. Physics of Life Reviews, In press (2024)
+	</li>
 <li>
 	12.	<b> C. M. Heggerud </b>  & A. Hastings, <a href= "https://royalsocietypublishing.org/doi/full/10.1098/rsif.2024.0059">Predicting transient dynamics through the use of empirical dynamical modelling: A case study of anaerobic digestion.</a> Journal of the Royal Society Interface, 21:20240059 (2024)
 </li><li>
